--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Recite Words</title>
     <meta charset="utf8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
