--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
     <title>Recite Words</title>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./bundled/index.css">
   </head>
 
   <body>
