feat: sematic html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="./bundled/index.css">
   </head>
 
-  <body>
-    <div id="app_root"></div>
-    <script src="./bundled/index.js"></script>
-  </body>
+  <body></body>
+  <script src="./bundled/index.js"></script>
 </html>
